--- a/app/src/main/res/layout/cart_fragment.xml
+++ b/app/src/main/res/layout/cart_fragment.xml
@@ -104,7 +104,7 @@
             android:paddingTop="2dp"
             android:paddingBottom="0dp"
             android:textSize="18sp"
-            android:textColor="@color/text_black"
+            android:textColor="@color/text_nearly_black"
         />
         <TextView
             android:id="@+id/cart_shipping"
@@ -114,7 +114,7 @@
             android:paddingTop="2dp"
             android:paddingBottom="0dp"
             android:textSize="18sp"
-            android:textColor="@color/text_black"
+            android:textColor="@color/text_nearly_black"
             />
     </RelativeLayout>
 
