--- a/app/src/main/res/layout/checkout_fragment.xml
+++ b/app/src/main/res/layout/checkout_fragment.xml
@@ -52,6 +52,7 @@
             android:paddingTop="0dp"
             android:paddingBottom="0dp"
             android:text="@string/coupons_rewards"
+            android:textColor="@color/text_nearly_black"
             />
         <TextView
             android:id="@+id/checkout_coupons_rewards"
@@ -60,6 +61,7 @@
             android:layout_alignParentRight="true"
             android:paddingTop="0dp"
             android:paddingBottom="0dp"
+            android:textColor="@color/text_nearly_black"
             />
     </RelativeLayout>
 
@@ -75,6 +77,7 @@
             android:paddingTop="0dp"
             android:paddingBottom="0dp"
             android:text="@string/item_subtotal"
+            android:textColor="@color/text_nearly_black"
             />
         <TextView
             android:id="@+id/checkout_item_subtotal"
@@ -83,6 +86,7 @@
             android:layout_alignParentRight="true"
             android:paddingTop="0dp"
             android:paddingBottom="0dp"
+            android:textColor="@color/text_nearly_black"
             />
     </RelativeLayout>
 
@@ -100,6 +104,7 @@
             android:paddingTop="0dp"
             android:paddingBottom="0dp"
             android:text="@string/shipping"
+            android:textColor="@color/text_nearly_black"
             />
         <TextView
             android:id="@+id/checkout_shipping"
@@ -108,6 +113,7 @@
             android:layout_alignParentRight="true"
             android:paddingTop="0dp"
             android:paddingBottom="0dp"
+            android:textColor="@color/text_nearly_black"
             />
     </RelativeLayout>
 
@@ -125,6 +131,7 @@
             android:paddingTop="0dp"
             android:paddingBottom="0dp"
             android:text="@string/tax"
+            android:textColor="@color/text_nearly_black"
             />
         <TextView
             android:id="@+id/checkout_tax"
@@ -133,6 +140,7 @@
             android:layout_alignParentRight="true"
             android:paddingTop="0dp"
             android:paddingBottom="0dp"
+            android:textColor="@color/text_nearly_black"
             />
     </RelativeLayout>
 
