--- a/app/src/main/res/values/color.xml
+++ b/app/src/main/res/values/color.xml
@@ -12,7 +12,7 @@
     <color name="hr_extra_light_gray">#f5f5f5</color>
     <color name="text_blue">#3f9fff</color>
     <color name="text_red">#ff0000</color>
-    <color name="text_green">#00ff00</color>
+    <color name="text_green">#6fab04</color>
     <color name="text_black">#000000</color>
     <color name="text_nearly_black">#333333</color>
 	<color name="text_white">#FFFFFF</color>
