--- a/app/src/main/res/layout/confirmation_fragment.xml
+++ b/app/src/main/res/layout/confirmation_fragment.xml
@@ -4,17 +4,12 @@
   ~ Copyright (c) 2014 Staples, Inc. All rights reserved.
   -->
 <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
-    android:id="@+id/confirmation"
+    xmlns:card_view="http://schemas.android.com/apk/res-auto"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
+    android:paddingLeft="16dp"
+    android:paddingRight="16dp"
     android:orientation="vertical">
-
-    <TextView
-        android:id="@+id/confirmation_title"
-        android:layout_width="match_parent"
-        style="@style/CartHeader"
-        android:textSize="24sp"
-        android:text="@string/order_confirmation_title"/>
 
     <!-- scrollable contents -->
     <ScrollView
@@ -28,34 +23,112 @@
             android:orientation="vertical"
             android:padding="6dp">
 
+            <!--green checkmark image-->
+            <ImageView
+                android:layout_width="40dp"
+                android:layout_height="40dp"
+                android:layout_gravity="center_horizontal"
+                android:layout_marginTop="32dp"
+                android:layout_marginBottom="16dp"
+                android:src="@drawable/bullet"
+                />
+
+            <!--confirmation message text -->
             <TextView
-                android:layout_width="match_parent"
-                android:layout_height="match_parent"
-                android:layout_gravity="center"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:layout_gravity="center_horizontal"
                 android:textSize="24sp"
+                android:textColor="@color/text_nearly_black"
                 android:text="@string/order_confirmation_msg"/>
             <TextView
-                android:id="@+id/order_number"
-                android:layout_width="match_parent"
-                android:layout_height="match_parent"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
                 android:layout_gravity="center"
-                android:textSize="24sp"/>
+                android:layout_marginTop="8dp"
+                android:textSize="14sp"
+                android:textColor="@color/text_nearly_black"
+                android:text="@string/order_confirmation_msg2" />
+            <TextView
+                android:id="@+id/email_confirm_msg"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:layout_gravity="center"
+                android:layout_marginTop="8dp"
+                android:textSize="14sp"
+                android:textColor="@color/text_nearly_black"
+                android:text="@string/order_confirmation_msg3" />
+
+            <!--order number-->
+            <TextView
+                android:layout_gravity="left"
+                style="@style/GraySubheading"
+                android:text="@string/order_number_label"/>
+            <TextView
+                android:id="@+id/order_number"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:layout_gravity="left"
+                android:textSize="14sp"
+                android:textColor="@color/text_nearly_black"
+                />
+
+            <!--delivery range-->
+            <TextView
+                android:layout_gravity="left"
+                style="@style/GraySubheading"
+                android:text="@string/delivery_range_label"/>
+            <TextView
+                android:id="@+id/delivery_range"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:layout_gravity="left"
+                android:textSize="14sp"
+                android:textColor="@color/text_nearly_black"
+                />
+
+            <!--order total -->
+            <TextView
+                android:layout_gravity="left"
+                style="@style/GraySubheading"
+                android:text="@string/order_total_label"/>
+            <TextView
+                android:id="@+id/order_total"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:layout_gravity="left"
+                android:textSize="14sp"
+                android:textColor="@color/text_nearly_black"
+                />
 
         </LinearLayout>
     </ScrollView>
 
 
-    <!-- continue shopping -->
-    <TextView
-        android:id="@+id/continue_shopping_btn"
-        style="@style/CheckoutFooter"
-        android:layout_width="wrap_content"
-        android:layout_alignParentLeft="true"
-        android:text="@string/continue_shopping"
-        android:textSize="28sp"
-        android:textColor="#FFFFFF"
-    />
+    <!-- continue shopping button -->
+    <!--checkout button-->
+    <android.support.v7.widget.CardView
+        android:id="@+id/action_checkout"
+        android:layout_width="match_parent"
+        android:layout_height="36dp"
+        android:layout_marginTop="8dp"
+        android:layout_marginBottom="8dp"
+        android:padding="0dp"
+        card_view:cardCornerRadius="1dp"
+        card_view:cardElevation="0dp"
+        card_view:cardBackgroundColor="@color/background_red_submission" >
 
+        <TextView
+            android:id="@+id/continue_shopping_btn"
+            android:layout_height="match_parent"
+            android:layout_width="match_parent"
+            android:gravity="center"
+            android:text="@string/continue_shopping"
+            android:textSize="14sp"
+            android:textColor="@color/text_white"
+            />
+
+    </android.support.v7.widget.CardView>
 
 </LinearLayout>
 
