--- a/app/src/main/res/layout/create_account.xml
+++ b/app/src/main/res/layout/create_account.xml
@@ -2,7 +2,10 @@
 
 <RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
     android:orientation="vertical" android:layout_width="match_parent"
-    android:layout_height="match_parent">
+    android:layout_height="match_parent"
+    android:paddingLeft="10dip"
+    android:paddingTop="10dip"
+    android:paddingRight="10dip">
 
     <EditText
         android:layout_width="wrap_content"
@@ -22,38 +25,49 @@
     <EditText
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:id="@+id/userNameRegister"
-        android:hint="Username"
-        android:imeOptions="actionNext"
-        android:singleLine="true"
-        android:layout_alignParentLeft="true"
-        android:layout_alignParentStart="true"
-        android:layout_alignParentRight="true"
-        android:layout_alignParentEnd="true"
-        android:layout_below="@+id/emailIdRegister" />
-
-    <EditText
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
         android:inputType="textPassword"
         android:ems="10"
         android:id="@+id/passwordRegister"
         android:hint="Password"
         android:imeOptions="actionDone"
         android:singleLine="true"
-        android:layout_below="@+id/userNameRegister"
+        android:layout_below="@+id/emailIdRegister"
         android:layout_alignParentLeft="true"
         android:layout_alignParentStart="true"
         android:layout_alignParentRight="true"
         android:layout_alignParentEnd="true" />
 
     <Button
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:textColor="@color/text_white"
+        android:text="@string/create_account"
+        android:id="@+id/register_button"
+        android:layout_marginTop="30dp"
+        android:layout_below="@+id/passwordTxt"/>
+
+    <TextView
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:id="@+id/passwordTxt"
+        android:layout_below="@+id/passwordRegister"
+        android:textSize="12dip"
+        android:visibility="gone"
+        android:textColor="@color/text_light_gray"
+        android:text="@string/create_acccount_pw_rules" />
+
+    <TextView
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:text="Register"
-        android:id="@+id/register_button"
-        android:layout_marginTop="27dp"
-        android:layout_centerHorizontal="true"
-        android:layout_below="@+id/passwordRegister" />
+        android:text="@string/show"
+        android:id="@+id/passwordLbl"
+        android:textSize="16dip"
+        android:clickable="true"
+        android:textColor="@color/text_blue"
+        android:layout_alignBottom="@+id/passwordRegister"
+        android:layout_alignRight="@+id/passwordRegister"
+        android:paddingBottom="10dip"
+        android:visibility="gone"
+        android:layout_alignEnd="@+id/passwordRegister" />
 
 </RelativeLayout>
