--- a/app/src/main/res/layout/order_fragment.xml
+++ b/app/src/main/res/layout/order_fragment.xml
@@ -21,14 +21,63 @@
             android:text="@string/no_orders_found"
             android:textColor="@android:color/darker_gray"/>
 
+
         <!--tracking shipment bottom sheet-->
         <LinearLayout
+            android:id="@+id/tracking_layout"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
+            android:layout_gravity="bottom"
+            android:orientation="vertical"
             android:visibility="invisible"
+            android:padding="16dp"
+            android:background="@color/background_white"
             >
+            <!--label and close button-->
+            <LinearLayout
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:orientation="horizontal" >
+                <TextView
+                    android:id="@+id/shipment_label"
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"
+                    android:textSize="16dp"/>
+                <ImageView
+                    android:id="@+id/close_button"
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"
+                    android:layout_gravity="right"
+                    android:src="@drawable/ic_close_black_18dp"/>
+            </LinearLayout>
 
-            <!--todo-->
+            <!--carrier-->
+            <TextView
+                android:id="@+id/carrier"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:textSize="16dp"/>
+            <!--tracking number-->
+            <TextView
+                android:id="@+id/tracking_number"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:textSize="16dp"/>
+
+            <!--horizontal rule-->
+            <View
+                android:layout_width="match_parent"
+                android:layout_height="1dp"
+                android:layout_marginTop="8dp"
+                android:layout_marginBottom="8dp"
+                android:background="@color/hr_extra_light_gray" />
+
+            <!-- delivery  -->
+            <TextView
+                android:id="@+id/delivery_scans"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:textSize="16dp"/>
 
         </LinearLayout>
 
