--- a/app/src/main/res/layout/add_creditcard_fragment.xml
+++ b/app/src/main/res/layout/add_creditcard_fragment.xml
@@ -20,7 +20,7 @@
             android:layout_weight="1"
             android:id="@+id/cardNumber"
             android:hint="Card Number"
-            android:textSize="15sp"
+            android:textSize="@dimen/fontsize_15sp"
             android:inputType="number"
             android:imeOptions="actionNext"
             android:layout_toEndOf="@+id/card_image"
@@ -33,7 +33,7 @@
             android:id="@+id/expirationDate"
             android:inputType="date"
             android:maxLength="5"
-            android:textSize="15sp"
+            android:textSize="@dimen/fontsize_15sp"
             android:hint="MM/YY"
             android:visibility="gone"
             android:imeOptions="actionDone"/>
@@ -44,7 +44,7 @@
             android:inputType="number"
             android:maxLength="4"
             android:hint="@string/cid"
-            android:textSize="15sp"
+            android:textSize="@dimen/fontsize_15sp"
             android:visibility="gone"
             android:layout_toRightOf="@+id/expirationDate"
             android:imeOptions="actionDone"
