--- a/app/src/main/res/layout/cart_fragment.xml
+++ b/app/src/main/res/layout/cart_fragment.xml
@@ -15,7 +15,7 @@
     <TextView
         android:id="@+id/free_shipping_msg"
         android:layout_width="match_parent"
-        android:layout_height="32dp"
+        android:layout_height="@dimen/verticalspacing_24dp"
         android:gravity="center_vertical"
         android:paddingLeft="@dimen/margin_16dp"
         android:background="@color/staples_white"
@@ -37,7 +37,7 @@
         <TextView
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:paddingTop="40dp"
+            android:paddingTop="@dimen/verticalspacing_48dp"
             android:textColor="@color/staples_black"
             android:textSize="@dimen/fontsize_20sp"
             android:text="@string/empty_cart_msg"
@@ -46,7 +46,7 @@
         <TextView
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:paddingTop="60dp"
+            android:paddingTop="@dimen/verticalspacing_56dp"
             android:textColor="@color/staples_middle_gray"
             android:textSize="@dimen/fontsize_18sp"
             android:text="@string/shopping_with_us"
@@ -55,7 +55,7 @@
         <TextView
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:paddingTop="24dp"
+            android:paddingTop="@dimen/verticalspacing_24dp"
             android:textColor="@color/staples_middle_gray"
             android:textSize="@dimen/fontsize_18sp"
             android:text="@string/price_match_guarantee"
@@ -115,7 +115,7 @@
     <!--coupon & rewards heading -->
     <android.support.v7.widget.CardView
         android:id="@+id/coupons_rewards_layout"
-        android:layout_height="40dp"
+        android:layout_height="@dimen/verticalspacing_48dp"
         android:layout_width="match_parent"
         android:gravity="center_vertical"
         card_view:contentPaddingLeft="@dimen/margin_16dp"
@@ -165,7 +165,7 @@
 		android:paddingBottom="0dp"
         android:paddingLeft="@dimen/margin_16dp"
         android:paddingRight="@dimen/margin_16dp"
-        android:paddingTop="7dp"
+        android:paddingTop="@dimen/verticalspacing_8dp"
 		android:visibility="visible"
 	>
         <TextView
