--- a/app/src/main/res/layout/cart_item_group.xml
+++ b/app/src/main/res/layout/cart_item_group.xml
@@ -27,7 +27,7 @@
         <TextView
             android:id="@+id/cartitem_shipping_estimate"
             android:layout_width="wrap_content"
-            android:layout_height="32dp"
+            android:layout_height="@dimen/verticalspacing_24dp"
             android:layout_alignParentLeft="true"
             android:gravity="center_vertical"
             android:paddingLeft="@dimen/margin_16dp"
@@ -36,7 +36,7 @@
         <TextView
             android:id="@+id/cartitem_shipping_estimate_itemqty"
             android:layout_width="wrap_content"
-            android:layout_height="32dp"
+            android:layout_height="@dimen/verticalspacing_24dp"
             android:layout_alignParentRight="true"
             android:gravity="center_vertical"
             android:paddingRight="@dimen/margin_16dp"
