--- a/app/src/main/res/layout/checkout_guest_entry.xml
+++ b/app/src/main/res/layout/checkout_guest_entry.xml
@@ -25,7 +25,7 @@
     <!--payment method-->
     <TextView
         style="@style/GraySubheading"
-        android:layout_marginTop="20dp"
+        android:layout_marginTop="@dimen/verticalspacing_24dp"
         android:text="@string/payment_method"/>
     <include layout="@layout/add_creditcard_fragment" android:id="@+id/payment_method_layout" />
 
@@ -33,13 +33,13 @@
     <LinearLayout
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:layout_marginTop="20dp"
+        android:layout_marginTop="@dimen/verticalspacing_24dp"
         android:orientation="horizontal">
         <TextView
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:textSize="@dimen/fontsize_18sp"
-            android:layout_marginRight="10dp"
+            android:layout_marginRight="8dp"
             android:text="@string/use_as_billing_addr"/>
         <Switch
             android:id="@+id/useShipAddrAsBillingAddr_switch"
