--- a/app/src/main/res/layout/confirmation_create_account.xml
+++ b/app/src/main/res/layout/confirmation_create_account.xml
@@ -13,7 +13,7 @@
         android:id="@+id/dialog_layout"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:padding="16dp"
+        android:padding="@dimen/margin_16dp"
         android:background="@color/staples_white"
         >
 
