--- a/app/src/main/res/layout/store_fragment_nomap.xml
+++ b/app/src/main/res/layout/store_fragment_nomap.xml
@@ -31,6 +31,6 @@
     <android.support.v7.widget.RecyclerView
         android:id="@+id/list"
         android:layout_width="match_parent"
-        android:layout_height="0dp"/>
-        android:layout_weight="1"
+        android:layout_height="0dp"
+        android:layout_weight="1"/>
 </com.staples.mobile.cfa.widget.AnimatorLayout>
