--- a/app/src/main/res/layout/bundle_item_tall.xml
+++ b/app/src/main/res/layout/bundle_item_tall.xml
@@ -113,8 +113,9 @@
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_alignParentBottom="true"
-
-        android:layout_alignParentRight="true"/>
+        android:layout_alignParentRight="true"
+        android:paddingRight="@dimen/action_bar_half_margin"
+        android:paddingBottom="@dimen/action_bar_half_margin"/>
     <ProgressBar
         android:id="@+id/bundle_whirlie"
         android:layout_width="wrap_content"
